Update Struktur & Inhalt

--- a/template/01_einleitung/einleitung.tex
+++ b/template/01_einleitung/einleitung.tex
@@ -1,22 +1,32 @@
-\chapter{Einleitung der Arbeit}
+\chapter{Einleitung}
 
-\section{Hintergrund und Ausgangssituation}
+\section{Geschichte des Internets}
 
 This is a fantasy documentary. The pioneering work shown in Hyperland however, is very real.
 Mit diesen Worten beginnt Dougles Adams 50-minütige Dokumentation aus dem Jahre 1990 mit dem treffenden Titel Hyperland. Der renommierte Science-Fiction-Autor stellt in diesem Dokumentarfilm dar, wie ein Internet mit (Hyper-)Links interaktiv navigierbar wäre, und dies Jahre vor den ersten Browsern.
-Im darauffolgenden Jahr entwickelte Tim Berners-Lee das World Wide Web, welches bald einen neuen Standard fürs Internet setzen sollte. Dieser Standard erleichterte das Programmieren der einzelnen Internetseiten, sowie die Navigation zwischen den einzelnen Seiten selbst, und das durch nicht mehr als einen Klick. Diese Version des Internets ist heutzutage als Web1 bekannt und auch wenn dies damals noch vorherzusehen war, prägte es die Vielfältigkeit und Sinnvollheit, wozu sich das Internet entwickeln würde.
+Im darauffolgenden Jahr entwickelte Tim Berners-Lee das World Wide Web, welches bald einen neuen Standard fürs Internet setzen sollte. Dieser Standard erleichterte das Programmieren der einzelnen Internetseiten, sowie die Navigation zwischen den einzelnen Seiten selbst, und das durch nicht mehr als einen Klick durch die Einführung eines Standards für die Erstellung für die Erstellung visueller Webseiten ein (Hypertext).\footnote{token s 379} Diese Version des Internets ist heutzutage als Web1 bekannt und, auch wenn dies damals noch nicht vorherzusehen war, prägte es die Vielfältigkeit und Sinnvollheit, wozu sich das Internet entwickeln würde.
 
 In weniger als einem Jahrzehnt würde sich das Internet noch ändern. Die Ära des Web2 ist geprägt von vielen Technologien und Innovationen, sowie von der Idee, dass der Nutzer immer weniger eine ausschließliche Rolle als passiven Konsumenten einnehmen soll, sondern vielmehr die doppelte Rolle des Konsumenten in einigen Bereichen und des Produktes in anderen, aber auch die des Anbieters, da immer mehr Anwendungen aus dem Web2 dem Laien erlaubten, Inhalte selbst zu erstellen, zu bearbeiten und zu verteilen. Um diese neue Rolle zu definieren, hat sich der Begriff Prosument (aus dem Englischen Prosumer) durchgesetzt.
-Eine der prägnantesten Innovationen dieser Internet-Epoche ist die Weiterentwicklung der Serveranbindung, aber auch neue Formen von Sicherheit sowie Technologien, welche die Kommunikation zwischen dem Computer eines Nutzers und dem Server auf verschiedene Arten verbessern. Wegen der immensen Anzahl an Informationen, welche durch die zentralisierten Server fließen, spricht man allgemein von „Big Data“. Dieser Begriff soll später noch genauer erklärt werden.
+Versammle eine Menge an Leuten, die glauben, sie seien wegen der einen Sache dort, in Wirklichkeit aber wegen einer ganz anderen Sache da sind. \footnote{google s 51}
+Eine der prägnantesten Innovationen dieser Internet-Epoche ist die Weiterentwicklung der Serveranbindung, aber auch neue Formen von Sicherheit, sowie Technologien, welche die Kommunikation zwischen dem Computer eines Nutzers und dem Server auf verschiedene Arten verbessern. Wegen der immensen Anzahl an Informationen, welche durch diese zentralisierte Server fließen, spricht man allgemein von „Big Data“. Dieser Begriff soll später noch genauer erklärt werden.
 
-Doch auch diese Zeit scheint langsam dem Ende zu neigen. Und damit ist die Zeit reif für den Anbruch des Web3. Beim Web3 steht hauptsächlich die Idee im Vordergrund, das Internet soll dezentral über Peer-to-Peer-Netzwerke laufen. Ein Beispiel davon wären die Blockchains. Allerdings muss sich diese neue Entwicklung noch mit einer Vielzahl von technologischen sowie rechtlichen Herausforderungen auseinandersetzen. Vielerorts ist das Wissen über die Mechanismen, das Potenzial und die Gefahren des Web3 noch unzureichend. Darüber hinaus befinden sich viele seiner Mechanismen noch in einem frühen Stadium und erscheinen vielen noch als zu abstrakt. Schlagwörter wie Kryptowährungen, Smart Contracts und Tokens sind zwar allgegenwärtig, aber es besteht noch Informationsbedarf, was die zugrundeliegenden Mechanismen dieser Anwendungen sowie den Stand der Technik betrifft.
+Doch auch diese Zeit scheint sich langsam dem Ende zu neigen. Und damit ist die Zeit reif für den Anbruch des Web3. Beim Web3 steht hauptsächlich die Idee im Vordergrund, dass das Internet dezentral über Peer-to-Peer-Netzwerke laufen soll.\footnote{token s 42} Das wohl verbreiteste Beispiel hierfür wären die Blockchain-Netzwerke. Diese neue Erfindung bringt jedoch eine Reihe von technischen und rechtlichen Herausforderungen mit sich, und in vielen Ländern ist das Wissen über die Mechanismen, Möglichkeiten und Risiken des Web 3 noch unzureichend. Hinzu kommt, dass viele der Mechanismen noch in den Kinderschuhen stecken und für viele Menschen zu abstrakt erscheinen. Worte wie Kryptowährung, Smart Contracts und Token sind allgegenwärtig, aber es gibt immer noch einen Mangel an Informationen über die Mechanismen hinter diesen Anwendungen und den aktuellen Stand der Technik.
+
+\begin{figure}[!ht]
+    \caption{3 Epochen des Internets}
+    \includegraphics[scale=1]{assets/figures/internetgeschichte.png}
+    \begin{flushleft}
+        Quelle: Token S. 19
+    \end{flushleft}
+    \label{fig:birds}
+\end{figure}
 
 \section{Forschungsziel, Forschungsfrage und These}
 \subsection{Forschungsziel}
 Wenn man von Distributed Ledger Systemen hört, wie beispielsweise dem Blockchain-Netzwerk, ist überwiegend von den positiven Aspekten sowie dem Potenzial, welches diese anbieten, die Rede. „Jede Technologie ist aber lediglich ein Werkzeug und zunächst neutral. Wie wir dieses Werkzeug einsetzen, ist fast nie eine technologische, sondern immer mehr eine humanistische Frage“.
-Im Folgenden soll zunächst ein Überblick über die Grundlagen der Technologien von Big Data und Blockchain gegeben werden. Anschließend sollen beide verglichen werden. Ziel dieser Arbeit ist herauszufinden, ob es als plausibel erscheint, dass Big Data durch Blockchain ersetzt werden soll, und falls ja, wie lange es dauern könnte.
+Im Folgenden soll zunächst ein Überblick über die Grundlagen der Technologien von Big Data und Blockchain gegeben werden. Anschließend sollen beide verglichen werden. Ziel dieser Arbeit ist herauszufinden, ob es als plausibel erscheint, dass Big Data durch Blockchain ersetzt werden soll, und falls ja, welche Zeitspanne dafür denkbar wäre.
 \subsection{Forschungsfrage}
-Welche Vor- und Nachteile haben die beiden Strukturen (BigData und Blockchain) und wie zukunftstauglich sind sie.
+Welche Vor- und Nachteile haben die beiden Strukturen (BigData und Blockchain) und wie zukunftstauglich sind sie?
 \subsection{These}
 Im Laufe der kommenden 10 Jahren wird Blockchain die meisten zentralen Systeme ersetzt haben.
 
