--- a/template/03_schluss/schluss.tex
+++ b/template/03_schluss/schluss.tex
@@ -1,33 +1,10 @@
 \chapter{Schluss}
 
-Lorem ipsum dolor sit amet\footnote{Vgl. Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 558.}, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large.
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes.
-The built-in norms should, as far as possible, be understood and commonly shared.
 
 \section{Kurzzusammenfassung der Arbeit}
+Im Folgenden soll nun die Arbeit zusammengefasst werden. 
+Blockchain bietet die gleichen Grundbausteine wie die, welche für Big Data Netzwerke benutzt werden. Allerdings bietet es zusätzlich höhere Sicherheit, so wie viele neue innovative Optionen und Möglichkeiten.
 
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor\footnote{Vgl. Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 558.} invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large.
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes.
-The built-in norms should, as far as possible, be understood and commonly shared.
-
-\section{Weitere Empfehlungen}
-
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-Automation in cars has a long history.  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
-At vero eos et accusam et justo duo dolores et ea rebum.
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet Acceptance of autonomous driving will depend on how far a consensus on these norms can be found, first among experts, then in society at large\footnote{Vgl. Baumann, M. F. u. a., Taking responsibility: A responsible research and innovation (RRI) perspective on insurance issues of semi-autonomous driving, 2019, S. 558.}.
-One ethical condition, however, should be crucial: in no case should the ethical algorithms be put in practice as nontransparent black boxes.
-The built-in norms should, as far as possible, be understood and commonly shared.
-
+\section{Ausblick}
+//gesetzgebung
+Spannend wird es zu sehen, was die Weiterentwicklung von Quantencomputern für Hashes und Kryptografie und folglich auch für DLTs bedeuten wird. Aber bis es so weit ist, ist die Blockchain die mit Abstand sicherste Form der Transaktionsdokumentation
